# Enc.-Glu-Meter

tcp_client/: CMakeLists.txt  picow_tcp_client.c
tcp_server/: AES.h  AES_Decrypt.h  CMakeLists.txt  picow_tcp_server.c
